--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,21 +1,27 @@
 <resources>
-    <string name="app_name">Math!Puzzles</string>
-    <string name="button2">Button2</string>
-    <string name="button3">Button3</string>
+    <string name="app_name" translatable="false">Math!Puzzles</string>
     <string name="new_game">New Game</string>
+    <string name="settings">Settings</string>
+    <string name="button3" translatable="false">Button3</string>
 
-    <string name="title_activity_new_game">NewGame</string>
+    <string name="title_activity_new_game" translatable="false">New Game</string>
     <string name="choose_level_label">Choose level</string>
     <string name="board_size_label">Board Size</string>
-    <string name="easy_button">Easy</string>
     <string name="time_label">Time</string>
-    <string name="medium_button">Medium</string>
     <string name="math_problems_label">Math problems</string>
+    <string name="easy_button">Easy</string>
+    <string name="medium_button">Medium</string>
     <string name="hard_button">Hard</string>
-    <string name="start_button">Start</string>
+    <string name="start_button">Start!</string>
     <string name="back_button">Back</string>
 
-    <string name="title_activity_game">Game</string>
-    <string name="dummy_button">Dummy Button</string>
-    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="title_activity_game" translatable="false">Game</string>
+    <string name="moves_count">Moves:</string>
+    <string name="you_won">You won! Moves:\u0020</string>
+
+    <string name="title_activity_settings" translatable="false">Settings</string>
+    <string name="lang_label">Language:</string>
+    <string name="en_lang">English</string>
+    <string name="de_lang">German</string>
+    <string name="bg_lang">Bulgarian</string>
 </resources>
