--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -9,12 +9,20 @@
     <string name="hard_button">Трудно</string>
     <string name="start_button">Започни!</string>
     <string name="back_button">Назад</string>
+    <string name="choose_level">Моля избери ниво</string>
     <string name="moves_count">Ходове:</string>
-    <string name="you_won">Ти спечели! Ходове:\\u0020</string>
     <string name="easy_button">Лесно</string>
     <string name="medium_button">Средно</string>
     <string name="en_lang">английски</string>
     <string name="de_lang">немски</string>
     <string name="bg_lang">български</string>
     <string name="lang_label">Език:</string>
+    <string name="timeUp_dialog_title">Времето изтече</string>
+    <string name="timeUp_dialog_neg">Меню</string>
+    <string name="timeUp_dialog_pos">Опитай пак</string>
+    <string name="youWon_dialog_title">Ти спечели!</string>
+    <string name="youWon_dialog_neg">Меню</string>
+    <string name="youWon_dialog_neut">Промени нивото</string>
+    <string name="youWon_dialog_pos">Пробвай друго</string>
+    <string name="youWon_dialog_text">Честито! Ходове: %1d,\nОставащо време %1s</string>
 </resources>
