Added buttons to game screen and exit button to main screen

--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -18,11 +18,12 @@
     <string name="bg_lang">български</string>
     <string name="lang_label">Език:</string>
     <string name="timeUp_dialog_title">Времето изтече</string>
-    <string name="timeUp_dialog_neg">Меню</string>
-    <string name="timeUp_dialog_pos">Опитай пак</string>
-    <string name="youWon_dialog_title">Ти спечели!</string>
+    <string name="main_menu">Меню</string>
+    <string name="try_again">Опитай пак</string>
+    <string name="you_won">Ти спечели!</string>
     <string name="youWon_dialog_neg">Меню</string>
-    <string name="youWon_dialog_neut">Промени нивото</string>
-    <string name="youWon_dialog_pos">Пробвай друго</string>
+    <string name="change_level">Промени нивото</string>
+    <string name="try_another">Пробвай друго</string>
     <string name="youWon_dialog_text">Честито! Ходове: %1d,\nОставащо време %1s</string>
+    <string name="exit">Излез</string>
 </resources>
