--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -17,12 +17,13 @@
     <string name="de_lang">Deutsch</string>
     <string name="bg_lang">Bulgarisch</string>
     <string name="lang_label">Sprache:</string>
-    <string name="timeUp_dialog_neg">Hauptmenü</string>
+    <string name="main_menu">Hauptmenü</string>
     <string name="timeUp_dialog_title">Die Zeit ist abgelaufen</string>
-    <string name="timeUp_dialog_pos">Noch ein mal versuchen</string>
-    <string name="youWon_dialog_title">Du hast gewonnen!</string>
+    <string name="try_again">Noch ein mal versuchen</string>
+    <string name="you_won">Du hast gewonnen!</string>
     <string name="youWon_dialog_neg">Hauptmenü</string>
-    <string name="youWon_dialog_neut">Niveau ändern</string>
-    <string name="youWon_dialog_pos">Anderes versuchen</string>
+    <string name="change_level">Niveau ändern</string>
+    <string name="try_another">Anderes versuchen</string>
     <string name="youWon_dialog_text">Gut gemacht! Züge: %1d,\nVerbleibende Zeit %1s</string>
+    <string name="exit">Verlassen</string>
 </resources>
