--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name" translatable="false">Math!Puzzles</string>
     <string name="new_game">New Game</string>
     <string name="settings">Settings</string>
-    <string name="button3" translatable="false">Button3</string>
+    <string name="exit">Exit</string>
 
     <string name="title_activity_new_game" translatable="false">New Game</string>
     <string name="choose_level_label">Choose level</string>
@@ -18,16 +18,18 @@
 
     <string name="title_activity_game" translatable="false">Game</string>
     <string name="moves_count">Moves:</string>
+    <string name="initial_moves_count" translatable="false">0</string>
+    <string name="time">Time:</string>
+    <string name="initial_time" translatable="false">00:00</string>
     <string name="timer_format" translatable="false">%02d:%02d</string>
     <string name="timeUp_dialog_title">Time\'s up!</string>
     <string name="timeUp_dialog_text" translatable="false">Sorry :(</string>
-    <string name="timeUp_dialog_neg">Main Menu</string>
-    <string name="timeUp_dialog_pos">Try again</string>
-    <string name="youWon_dialog_title">You won!</string>
+    <string name="main_menu">Main Menu</string>
+    <string name="try_again">Try again</string>
+    <string name="you_won">You won!</string>
     <string name="youWon_dialog_text">Congrats! Moves: %1d,\nТime remaining %1s</string>
-    <string name="youWon_dialog_neg">Main Menu</string>
-    <string name="youWon_dialog_neut">Change Level</string>
-    <string name="youWon_dialog_pos">Try another</string>
+    <string name="change_level">Change Level</string>
+    <string name="try_another">Try another</string>
 
     <string name="title_activity_settings" translatable="false">Settings</string>
     <string name="lang_label">Language:</string>
