--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -31,4 +31,13 @@
     <string name="forTime_label">Spiel um Zeit</string>
     <string name="done">Fertig</string>
     <string name="back_to_main">Menü</string>
+    <string name="button_theme_label">Druckknopffarbe</string>
+    <string name="button_theme_light">Hell</string>
+    <string name="button_theme_dark">Dunkel</string>
+    <string name="toast_sound_on">Klänge ein</string>
+    <string name="toast_sound_off">Klänge aus</string>
+    <string name="toast_time_on">Zeit ein</string>
+    <string name="toast_time_off">Zeit aus</string>
+    <string name="toast_theme_dark">Druckknopffarbe dunkel</string>
+    <string name="toast_theme_light">Druckknopffarbe hell</string>
 </resources>
