--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -40,4 +40,5 @@
     <string name="toast_time_off">Zeit aus</string>
     <string name="toast_theme_dark">Druckknopffarbe dunkel</string>
     <string name="toast_theme_light">Druckknopffarbe hell</string>
+    <string name="toast_rate">Bewerte die App</string>
 </resources>
