--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
     <string name="app_name" translatable="false">Math!Puzzles</string>
+    <string name="toast_rate">Rate the app</string>
+    <string name="logo" translatable="false">Logo</string>
     <string name="new_game">New Game</string>
     <string name="settings">Settings</string>
     <string name="exit">Exit</string>
-    <string name="logo" translatable="false">Logo</string>
 
     <string name="title_activity_new_game" translatable="false">New Game</string>
     <string name="choose_level_label">Choose level</string>
