--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name" translatable="false">Math!Puzzles</string>
-    <string name="toast_rate">Rate the app</string>
+    <string name="toast_rate">Rate app</string>
     <string name="logo" translatable="false">Logo</string>
     <string name="new_game">New Game</string>
     <string name="settings">Settings</string>
@@ -44,6 +44,7 @@
     <string name="button_theme_label">Button theme</string>
     <string name="button_theme_light">Light</string>
     <string name="button_theme_dark">Dark</string>
+    <string name="toast_language_changed">Language changed to English</string>
     <string name="toast_sound_on">Sound on</string>
     <string name="toast_sound_off">Sound off</string>
     <string name="toast_time_on">Time on</string>
@@ -57,5 +58,12 @@
     <string name="initial_dialog_button1" translatable="false">button1</string>
     <string name="initial_dialog_button2" translatable="false">button2</string>
     <string name="initial_dialog_button3" translatable="false">button3</string>
+
+    <string name="shared_prefs_file_name" translatable="false">prefs</string>
+    <string name="key_locale" translatable="false">locale</string>
+    <string name="default_locale" translatable="false">en_gb</string>
+    <string name="key_sound" translatable="false">sound</string>
+    <string name="key_time" translatable="false">time</string>
+    <string name="key_theme" translatable="false">theme</string>
 
 </resources>
